# kicad-ecs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  build.rs
examples/: basic.rs  ecs_integration.rs  real_kicad_ecs.rs  tracing_demo.rs
proto/: README.md
src/: client.rs  components.rs  lib.rs  systems.rs  tracing.rs  world.rs
