[package]
name = "kicad-ecs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Entity Component System (ECS) architecture for KiCad PCB design data"
repository = "https://github.com/yourusername/kicad-ecs"
license = "MIT OR Apache-2.0"
keywords = ["kicad", "ecs", "pcb", "cad", "electronics"]
categories = ["science", "simulation"]

[dependencies]
bevy_ecs = "0.14"
eyre = "0.6"
prettytable-rs = "0.10"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
protobuf = "3.7.2"
tokio = { version = "1", features = ["full"] }
nng = "1.0.1"
thiserror = "1.0"
num-traits = "0.2.17"

[build-dependencies]
protobuf-codegen = "3.7.2"
walkdir = "2.4.0"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "tracing_demo"
path = "examples/tracing_demo.rs"

[[example]]
name = "ecs_integration"
path = "examples/ecs_integration.rs"

[[example]]
name = "real_kicad_ecs"
path = "examples/real_kicad_ecs.rs"